--- a/app/views/lahHakemus.html
+++ b/app/views/lahHakemus.html
@@ -1,86 +1,113 @@
-<div class="container">
-  <div class="row">
-    <div class="col-md-16">
-      <a href="#"><span class='glyphicon glyphicon-circle-arrow-left'></span>Palaa hakemusten päänäkymään</a>
-      <a href="#/l/hakemus" class="btn btn-primary">Avustushakemus 2016</a>
-      <a href="#" class="btn btn-default disabled">1. maksatushakemus</a>
-      <a href="#" class="btn btn-default disabled">2. maksatushakemus</a>
-    </div>
-  </div>
-  <h3><b>JOUKKOLIIKENTEEEN VALTIONAVUSTUSHAKEMUS 2016</b></h3>
-
-  <form name="hakemusForm">
-    <div class="row">
-      <div class="col-md-6">
-        <div class="form-group">
-          <label>Kunnan nimi:</label>
-          <input type="text" ng-model="hakemus.kuntaNimi" class="form-control">
-        </div>
-      </div>
-      <div class="col-md-6">
-        <div class="form-group">
-          <label>Postiosoite:</label>
-          <input type="text" ng-model="hakemus.kuntaPostiosoite" class="form-control">
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-6">
-        <div class="form-group">
-          <label>Postinumero:</label>
-          <input type="text" ng-model="hakemus.kuntaPostinumero" class="form-control">
-        </div>
-      </div>
-      <div class="col-md-6">
-        <div class="form-group">
-          <label>Postitoimipaikka:</label>
-          <input type="text" ng-model="hakemus.kuntaPostitoimipaikka" class="form-control">
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-6">
-        <div class="form-group">
-          <label>Pankkitilin numero:</label>
-          <input type="text" ng-model="hakemus.kuntaPankkitili" class="form-control">
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-6">
-        <div class="form-group">
-          <label>Yhteyshenkilö:</label>
-          <input type="text" ng-model="hakemus.kuntaYhteysHlo" class="form-control">
-        </div>
-      </div>
-      <div class="col-md-6">
-        <div class="form-group">
-          <label>Yhteyshenkilön virka-asema:</label>
-          <input type="text" ng-model="hakemus.kuntaYhteysHloVirkaAsema" class="form-control">
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-6">
-        <div class="form-group">
-          <label>Yhteyshenkilön puhelin:</label>
-          <input type="text" ng-model="hakemus.kuntaYhteysHloPuh" class="form-control">
-        </div>
-      </div>
-      <div class="col-md-6">
-        <div class="form-group">
-          <label>Yhteyshenkilön sähköposti:</label>
-          <input type="text" ng-model="hakemus.kuntaYhteysHloSahkoposti" class="form-control">
-        </div>
-      </div>
-    </div>
-    <div class="col-md-6"></div>
-    <div class="col-md-6">
-      <button data-ng-click="saveHakemus(hakemus)" class="btn btn-default">Tallenna</button>
-      <button data-ng-click="addHakemus(hakemus)" class="btn btn-default">Lähetä hakemus</button>
-    </div>
-  </form>
-  <div>
-    <p>{{hakemukset | json}}</p>
+<div class="row">
+  <div class="col-md-16">
+    <a href="#"><span class='glyphicon glyphicon-circle-arrow-left'></span>Palaa hakemusten päänäkymään</a>
+    <a href="#/l/hakemus" class="btn btn-primary">Avustushakemus {{avustushakemus.vuosi}}</a>
+    <a href="#" class="btn btn-default disabled">1. maksatushakemus</a>
+    <a href="#" class="btn btn-default disabled">2. maksatushakemus</a>
   </div>
 </div>
+<div class="row">
+  <h2><b>JOUKKOLIIKENTEEEN VALTIONAVUSTUSHAKEMUS {{avustushakemus.vuosi}}</b></h2>
+</div>
+<div class="row">
+  <div class="col-md-12">
+    <h3>Hakijan tiedot</h3>
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-4">
+    <h4>Kunnan nimi</h4>
+    <h5>{{osastoTiedot.kuntaNimi}}</h5>
+    <h4>Postiosoite</h4>
+    <h5>{{osastoTiedot.kuntaPostiosoite}}</h5>
+    <h4>Postinumero</h4>
+    <h5>{{osastoTiedot.kuntaPostinumero}}</h5>
+    <h4>Postitoimipaikka</h4>
+    <h5>{{osastoTiedot.kuntaPostitoimipaikka}}</h5>
+    <h4>Pankkitilin numero</h4>
+    <h5>{{osastoTiedot.kuntaPankkitili}}</h5>
+  </div>
+  <div class="col-md-4">
+    <h4>Hakijat</h4>
+    <h5>{{osastoTiedot.kuntaYhteysHlo}}</h5>
+    <h5>{{osastoTiedot.kuntaYhteysHloVirkaAsema}}</h5>
+    <h5>{{osastoTiedot.kuntaYhteysHloPuh}}</h5>
+    <h5>{{osastoTiedot.kuntaYhteysHloSahkoposti}}</h5>
+    <br>
+    <h5>{{osastoTiedot.kuntaHyvaksyjaYhteysHlo}}</h5>
+    <h5>{{osastoTiedot.kuntaHyvaksyjaYhteysHloVirkaAsema}}</h5>
+    <h5>{{osastoTiedot.kuntaHyvaksyjaYhteysHloPuh}}</h5>
+    <h5>{{osastoTiedot.kuntaHyvaksyjaYhteysHloSahkoposti}}</h5>
+  </div>
+  <div class="col-md-4">
+    <br>
+    <h5>{{osastoTiedot.kuntaToinenYhteysHlo}}</h5>
+    <h5>{{osastoTiedot.kuntaToinenYhteysHloVirkaAsema}}</h5>
+    <h5>{{osastoTiedot.kuntaToinenYhteysHloPuh}}</h5>
+    <h5>{{osastoTiedot.kuntaToinenYhteysHloSahkoposti}}</h5>
+  </div>
+</div>
+<div>
+  <form name="avustusHakemusForm">
+    <div class="row">
+      <div class="col-md-12">
+        <h3>Valtionavustuksen kohde ja haettava valtionavustuksen määrä</h3>
+    </div>
+    </div>
+    <div class="row">
+      <div class="col-md-9">
+        <h4>PSA:n mukaisen liikenteen hankinta</h4>
+    </div>
+      <div class="col-md-3">
+        <h4>xxx xxx,xx €</h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        <h5><input type="checkbox" ng-model="avustushakemus.paikallisliikenne"> paikallisliikenne</h5>
+      </div>
+      <div class="col-md-6">
+        <h5>Haettava valtionavustus (euroa)</h5>
+        <input type="text" class="form-control" ng-model="avustushakemus.paikallisliikenneValtionavustus"/>
+      </div>
+      <div class="col-md-6">
+        <h5>Kunnan oma rahoitusosuus (euroa)</h5>
+        <input type="text" class="form-control" ng-model="avustushakemus.paikallisliikenneRahoitusosuus"/>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        <h5><input type="checkbox" ng-model="avustushakemus.integroitupalvelulinja"> integroitu palvelulinja, kaikille
+          avointa</h5>
+      </div>
+      <div class="col-md-6">
+        <h5>Haettava valtionavustus (euroa)</h5>
+        <input type="text" class="form-control" ng-model="avustushakemus.integroitupalvelulinjaValtionavustus"/>
+      </div>
+      <div class="col-md-6">
+        <h5>Kunnan oma rahoitusosuus (euroa)</h5>
+        <input type="text" class="form-control" ng-model="avustushakemus.integroitupalvelulinjaRahoitusosuus"/>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        <h5><input type="checkbox" ng-model="avustushakemus.muupsa"> muu PSA:n mukaisen liikenteen järjestäminen</h5>
+      </div>
+      <div class="col-md-6">
+        <h5>Haettava valtionavustus (euroa)</h5>
+        <input type="text" class="form-control" ng-model="avustushakemus.muupsaValtionavustus"/>
+      </div>
+      <div class="col-md-6">
+        <h5>Kunnan oma rahoitusosuus (euroa)</h5>
+        <input type="text" class="form-control" ng-model="avustushakemus.muupsaRahoitusosuus"/>
+      </div>
+    </div>
+    <div class="row">
+    <div class="col-md-6"></div>
+    <div class="col-md-6">
+      <button data-ng-click="saveAvustushakemus()" class="btn btn-default">Tallenna</button>
+      <button data-ng-click="sendAvustushakemus()" class="btn btn-default">Lähetä hakemus</button>
+    </div>
+  </form>
+</div>
+
