--- a/app/views/lahHakemus.html
+++ b/app/views/lahHakemus.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-md-16">
+  <div class="col-md-12">
     <a href="#"><span class='glyphicon glyphicon-circle-arrow-left'></span>Palaa hakemusten päänäkymään</a>
     <a href="#/l/hakemus" class="btn btn-primary">Avustushakemus {{avustushakemus.vuosi}}</a>
     <a href="#" class="btn btn-default disabled">1. maksatushakemus</a>
@@ -7,7 +7,9 @@
   </div>
 </div>
 <div class="row">
+  <div class="col-md-12">
   <h2><b>JOUKKOLIIKENTEEEN VALTIONAVUSTUSHAKEMUS {{avustushakemus.vuosi}}</b></h2>
+  </div>
 </div>
 <div class="row">
   <div class="col-md-12">
