--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -39,8 +39,15 @@ body {
 
 /* Custom page footer */
 .footer {
-  padding-top: 19px;
   color: #777;
+  background: #0073b8  ; /* Old browsers */
+  background: -moz-linear-gradient(top, #0073b8   0%, #005196   100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#0073b8  ), color-stop(100%,#005196  )); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top, #0073b8   0%,#005196   100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top,  #0073b8   0%,#005196   100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top,  #0073b8   0%,#005196   100%); /* IE10+ */
+  background: linear-gradient(to bottom,  #0073b8   0%,#005196   100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0073b8  ', endColorstr='#005196  ',GradientType=0 ); /* IE6-9 */
   border-top: 1px solid #e5e5e5;
 }
 
@@ -65,28 +72,5 @@ body {
 
   p + h4 {
     margin-top: 28px;
-  }
-}
-
-/* Responsive: Portrait tablets and up */
-@media screen and (min-width: 768px) {
-  .container {
-    max-width: 730px;
-  }
-
-  /* Remove the padding we set earlier */
-  .header,
-  .marketing,
-  .footer {
-    padding-left: 0;
-    padding-right: 0;
-  }
-  /* Space out the masthead */
-  .header {
-    margin-bottom: 30px;
-  }
-  /* Remove the bottom border on the jumbotron for visual effect */
-  .jumbotron {
-    border-bottom: 0;
   }
 }
