--- a/app/views/kasHakemukset.html
+++ b/app/views/kasHakemukset.html
@@ -1,6 +1,7 @@
 <div class="col-md-12">
   <a href="#" class="btn btn-primary">Avustushakemukset</a>
   <a href="#" class="btn btn-default disabled">Maksatushakemukset</a>
+  <a href="#/k/hakemuskaudenhallinta" class="btn btn-primary">Hakemuskauden hallinta</a>
 </div>
 <h2>JOUKKOLIIKENTEEN AVUSTUSHAKEMUKSET 2015</h2>
 <div id="grid1" ui-grid="gridOptions" class="grid" ui-grid-auto-resize></div>
