LIVIJUKU-22: Hakemukset haetaan tietokannasta, Sivuja muutettu Bootstrap tyyliin, UI grid korvattu smart tableksi

--- a/app/styles/juku.css
+++ b/app/styles/juku.css
@@ -15,3 +15,13 @@
 textarea{
   width: 100%;
 }
+
+/* CSS used here will be applied after bootstrap.css */
+.badge.badge-notify{
+  background:red;
+  color:white;
+  position:relative;
+  top: -20px;
+  left: 20px;
+}
+
