--- a/app/views/kasHakemukset.html
+++ b/app/views/kasHakemukset.html
@@ -31,7 +31,7 @@
     <td><hakemus-label tila="{{hakemus.hakemuksenTila}}"></hakemus-label></td>
     <td>{{hakemus.viimeisinMuutos}}</td>
     <td>{{hakemus.diaarinumero}}</td>
-    <td><span class='glyphicon glyphicon-user'/>{{hakemus.kasittelija}}</td>
+    <td>{{hakemus.kasittelija}}</td>
   </tr>
   </tbody>
 </table>
@@ -41,7 +41,7 @@
   </div>
   <div class="col-md-4">
     <div class="pull-right">
-      <a href="#" class="btn btn-primary">Suunnittelu ja päätöksenteko<span class='glyphicon glyphicon-play'/></a>
+      <button class="btn btn-primary" ng-click="getKasSuunnittelu(2015)">Suunnittelu ja päätöksenteko<span class='glyphicon glyphicon-play'/></button>
     </div>
   </div>
 </div>
