--- a/app/views/lahHakemukset.html
+++ b/app/views/lahHakemukset.html
@@ -13,7 +13,7 @@
           <div class="panel-heading">
             <h3 class="panel-title">Avustushakemus</h3>
           </div>
-          <div class="panel-body" data-ng-click="getHakemus(hakemuskausi.avustushakemusId)">
+          <div class="panel-body clickable" data-ng-click="getHakemus(hakemuskausi.avustushakemusId)">
             <h3><hakemus-label tila ="{{hakemuskausi.avustushakemusTilatunnus}}"></hakemus-label></h3>
             <h4>Hakuaika:</h4>
             <h4>{{hakemuskausi.avustushakemusAlkupvm | date:'dd.MM yyyy'}}-{{hakemuskausi.avustushakemusLoppupvm |
@@ -26,7 +26,7 @@
           <div class="panel-heading">
             <h3 class="panel-title">1. maksatushakemus</h3>
           </div>
-          <div class="panel-body" data-ng-click="getHakemus(hakemuskausi.maksatushakemus1Id)">
+          <div class="panel-body clickable" data-ng-click="getHakemus(hakemuskausi.maksatushakemus1Id)">
             <h3><hakemus-label tila="{{hakemuskausi.maksatushakemus1Tilatunnus}}"></hakemus-label></h3>
             <h4>Hakuaika:</h4>
             <h4>{{hakemuskausi.maksatushakemus1Alkupvm | date:'dd.MM yyyy'}}-{{hakemuskausi.maksatushakemus1Loppupvm |
@@ -39,7 +39,7 @@
           <div class="panel-heading">
             <h3 class="panel-title">2. maksatushakemus</h3>
           </div>
-          <div class="panel-body" data-ng-click="getHakemus(hakemuskausi.maksatushakemus2Id)">
+          <div class="panel-body clickable" data-ng-click="getHakemus(hakemuskausi.maksatushakemus2Id)">
             <h3><hakemus-label tila="{{hakemuskausi.maksatushakemus2Tilatunnus}}"></hakemus-label></h3>
             <h4>Hakuaika:</h4>
             <h4>{{hakemuskausi.maksatushakemus2Alkupvm | date:'dd.MM yyyy'}}-{{hakemuskausi.maksatushakemus2Loppupvm |
