--- a/app/styles/juku.css
+++ b/app/styles/juku.css
@@ -1,6 +1,90 @@
-.alaviiva {
-  border-bottom: solid;
+html
+{
+  position: relative;
+  min-height: 100%;
+}
+
+body
+{
+  margin-bottom: 90px;
+}
+
+#footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  background-color: #0088cc;
+  background: #0088cc; /* Old browsers */ background: -moz-linear-gradient(top,  #0088cc 0%, #005196 100%); /* FF3.6+ */ background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#0088cc), color-stop(100%,#005196)); /* Chrome,Safari4+ */ background: -webkit-linear-gradient(top,  #0088cc 0%,#005196 100%); /* Chrome10+,Safari5.1+ */ background: -o-linear-gradient(top,  #0088cc 0%,#005196 100%); /* Opera 11.10+ */ background: -ms-linear-gradient(top,  #0088cc 0%,#005196 100%); /* IE10+ */ background: linear-gradient(to bottom,  #0088cc 0%,#005196 100%); /* W3C */ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0088cc', endColorstr='#005196',GradientType=0 ); /* IE6-9 */   border-radius: 0px;;
+}
+
+/* Fixed navbar styles */
+
+.alaviiva
+{
   margin-bottom: 20px;
+  border-bottom: 1px solid #dddddd;
+  padding-top: 25px;
+}
+
+textarea
+{
+  width: 100%;
+}
+
+.navbar {
+  background: #0088cc; /* Old browsers */
+  background: -moz-linear-gradient(top,  #0088cc 0%, #005196 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#0088cc), color-stop(100%,#005196)); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top,  #0088cc 0%,#005196 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top,  #0088cc 0%,#005196 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top,  #0088cc 0%,#005196 100%); /* IE10+ */
+  background: linear-gradient(to bottom,  #0088cc 0%,#005196 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0088cc', endColorstr='#005196',GradientType=0 ); /* IE6-9 */
+  border-radius: 0px;
+
+}
+
+.navbartxt
+{
+  color: #ffffff !important;
+}
+
+.footer
+{
+  margin-bottom: 0px;
+  padding-top: 10px;
+  padding-bottom: 20px;
+}
+
+.logoalign
+{
+  position: relative;
+  top: -8px;
+  left: -10px;
+}
+
+.r-align
+{
+  text-align: right;
+}
+
+.footerlogo
+{
+  position: relative;
+  left: -30px;
+}
+
+.bodypadding
+{
+  padding-top: 70px;
+}
+
+.footerwspace
+{
+  position: relative;
+  height: 20px;
+  background-color: #ffffff;
 }
 
 .uusihakemuskausi{
@@ -10,10 +94,6 @@
   color: #0067ce;
   margin-bottom: 30px;
   padding: 20px;
-}
-
-textarea{
-  width: 100%;
 }
 
 .badge.badge-notify{
